--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body {
 }
 
 .container {
-    width: 300px;
+    width: 100vw;
     height: 300px;
     border-radius: 2px;
     border: 2px solid black;
@@ -35,6 +35,8 @@ body {
     background-color: rgba(110, 64, 163, 0.7);
     position: fixed;
 }
+
+
 
 .bg-sticky {
     background-color: rgba(117, 30, 84, 0.7);
